--- a/tools/generator/generator.html
+++ b/tools/generator/generator.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>DA App SDK Sample</title>
+  <title>NSW Site Creator</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <link rel="stylesheet" href="https://da.live/nx/styles/nexter.css">
   <link rel="stylesheet" href="/tools/generator/index.css">
