--- a/tools/generator/generator.html
+++ b/tools/generator/generator.html
@@ -19,9 +19,9 @@
 <body>
   <main>
     <picture>
-      <source type="image/webp" srcset="https://main--blueprint--nsw-pilot.aem.page/media_1281bc5b11f445054fed172b52f66f6c982594e0f.jpeg?width=2000&#x26;format=webply&#x26;optimize=medium" media="(min-width: 600px)">
-      <source type="image/webp" srcset="https://main--blueprint--nsw-pilot.aem.page/media_1281bc5b11f445054fed172b52f66f6c982594e0f.jpeg?width=750&#x26;format=webply&#x26;optimize=medium">
-      <img loading="lazy" alt="" src="https://main--blueprint--nsw-pilot.aem.page/media_1281bc5b11f445054fed172b52f66f6c982594e0f.jpeg?width=750&#x26;format=jpeg&#x26;optimize=medium" width="2048" height="1152">
+      <source type="image/webp" srcset="https://main--blueprint--nsw-pilot.aem.live/media_1281bc5b11f445054fed172b52f66f6c982594e0f.jpeg?width=2000&#x26;format=webply&#x26;optimize=medium" media="(min-width: 600px)">
+      <source type="image/webp" srcset="https://main--blueprint--nsw-pilot.aem.live/media_1281bc5b11f445054fed172b52f66f6c982594e0f.jpeg?width=750&#x26;format=webply&#x26;optimize=medium">
+      <img loading="lazy" alt="" src="https://main--blueprint--nsw-pilot.aem.live/media_1281bc5b11f445054fed172b52f66f6c982594e0f.jpeg?width=750&#x26;format=webply&#x26;optimize=medium" width="2048" height="1152">
     </picture>
     <da-generator></da-generator>
   </main>
